--- a/src/servers/Cargo.toml
+++ b/src/servers/Cargo.toml
@@ -59,7 +59,7 @@ opensrv-mysql = "0.4"
 opentelemetry-proto.workspace = true
 parking_lot = "0.12"
 pgwire = "0.16"
-pin-project = "1.0"
+pin-project.workspace = true
 postgres-types = { version = "0.2", features = ["with-chrono-0_4"] }
 pprof = { version = "0.11", features = [
     "flamegraph",
