unify quote style
Signed-off-by: tison <wander4096@gmail.com>

--- a/config/metasrv.example.toml
+++ b/config/metasrv.example.toml
@@ -31,9 +31,9 @@ retry_delay = "500ms"
 # Failure detectors options.
 [failure_detector]
 threshold = 8.0
-min_std_deviation = '100ms'
-acceptable_heartbeat_pause = '3000ms'
-first_heartbeat_estimate = '1000ms'
+min_std_deviation = "100ms"
+acceptable_heartbeat_pause = "3000ms"
+first_heartbeat_estimate = "1000ms"
 
 # # Datanode options.
 # [datanode]
