--- a/tests-integration/Cargo.toml
+++ b/tests-integration/Cargo.toml
@@ -68,6 +68,7 @@ uuid.workspace = true
 datafusion-expr.workspace = true
 datafusion.workspace = true
 itertools.workspace = true
+num_cpus = "1.13"
 opentelemetry-proto.workspace = true
 partition.workspace = true
 paste.workspace = true
