--- a/src/file-engine/Cargo.toml
+++ b/src/file-engine/Cargo.toml
@@ -9,6 +9,7 @@ default = []
 test = ["common-test-util"]
 
 [dependencies]
+api = { workspace = true, optional = true }
 async-trait = "0.1"
 common-catalog.workspace = true
 common-datasource.workspace = true
