--- a/config/standalone.example.toml
+++ b/config/standalone.example.toml
@@ -113,14 +113,14 @@ retry_delay = "500ms"
 [storage]
 # The working home directory.
 data_home = "/tmp/greptimedb/"
+# Storage type.
+type = "File"
 # TTL for all tables. Disabled by default.
 # global_ttl = "7d"
 # Cache configuration for object storage such as 'S3' etc.
 # cache_path = "/path/local_cache"
 # The local file cache capacity in bytes.
 # cache_capacity = "256MB"
-[storage.default_store]
-type = "File"
 
 # Mito engine options
 [[region_engine]]
