--- a/src/metric-engine/Cargo.toml
+++ b/src/metric-engine/Cargo.toml
@@ -7,6 +7,7 @@ license.workspace = true
 [dependencies]
 ahash.workspace = true
 api.workspace = true
+aquamarine.workspace = true
 async-trait.workspace = true
 base64.workspace = true
 common-error.workspace = true
