--- a/src/puffin/Cargo.toml
+++ b/src/puffin/Cargo.toml
@@ -5,11 +5,17 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
+async-trait.workspace = true
+bitflags.workspace = true
+common-error.workspace = true
+common-macro.workspace = true
 derive_builder.workspace = true
 futures.workspace = true
 pin-project.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+snafu.workspace = true
 
 [dev-dependencies]
+tokio-util.workspace = true
 tokio.workspace = true
