--- a/src/api/Cargo.toml
+++ b/src/api/Cargo.toml
@@ -6,11 +6,13 @@ license.workspace = true
 
 [dependencies]
 common-base.workspace = true
+common-decimal.workspace = true
 common-error.workspace = true
 common-macro.workspace = true
 common-time.workspace = true
 datatypes.workspace = true
 greptime-proto.workspace = true
+paste = "1.0"
 prost.workspace = true
 snafu.workspace = true
 tonic.workspace = true
