--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -140,7 +140,7 @@ jobs:
       - name: Run cargo clippy
         run: cargo clippy --workspace --all-targets -- -D warnings
 
-  tests:
+  coverage:
     if: github.event.pull_request.draft == false
     runs-on: ubuntu-20.04-8-cores
     timeout-minutes: 60
