--- a/src/common/meta/Cargo.toml
+++ b/src/common/meta/Cargo.toml
@@ -31,6 +31,7 @@ lazy_static.workspace = true
 prometheus.workspace = true
 prost.workspace = true
 regex.workspace = true
+rskafka.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 snafu.workspace = true
@@ -38,6 +39,7 @@ store-api.workspace = true
 strum.workspace = true
 table.workspace = true
 tokio.workspace = true
+toml.workspace = true
 tonic.workspace = true
 
 [dev-dependencies]
