--- a/config/metasrv.example.toml
+++ b/config/metasrv.example.toml
@@ -59,6 +59,6 @@ num_topics = 64
 # Available selector types: 
 # - "RoundRobin" (default)
 selector_type = "RoundRobin"
-topic_name_prefix = "gt_kafka_topic"
+topic_name_prefix = "greptime_wal"
 num_partitions = 1
 replication_factor = 3
