--- a/tests-integration/Cargo.toml
+++ b/tests-integration/Cargo.toml
@@ -36,6 +36,9 @@ frontend = { workspace = true, features = ["testing"] }
 futures.workspace = true
 meta-client.workspace = true
 meta-srv = { workspace = true, features = ["mock"] }
+mysql_async = { version = "0.33", default-features = false, features = [
+    "default-rustls",
+] }
 object-store.workspace = true
 once_cell.workspace = true
 operator.workspace = true
@@ -59,6 +62,7 @@ sqlx = { version = "0.6", features = [
 substrait.workspace = true
 table.workspace = true
 tempfile.workspace = true
+time = "0.3"
 tokio.workspace = true
 tonic.workspace = true
 tower = "0.4"
