fix: fix procedure loaders not found issue

--- a/src/common/meta/Cargo.toml
+++ b/src/common/meta/Cargo.toml
@@ -42,5 +42,6 @@ tonic.workspace = true
 
 [dev-dependencies]
 chrono.workspace = true
+common-procedure = { workspace = true, features = ["testing"] }
 datatypes.workspace = true
 hyper = { version = "0.14", features = ["full"] }
