--- a/src/common/procedure/Cargo.toml
+++ b/src/common/procedure/Cargo.toml
@@ -4,6 +4,10 @@ version.workspace = true
 edition.workspace = true
 license.workspace = true
 
+
+[features]
+testing=[]
+
 [dependencies]
 async-stream.workspace = true
 async-trait.workspace = true
