--- a/src/servers/Cargo.toml
+++ b/src/servers/Cargo.toml
@@ -74,6 +74,7 @@ regex.workspace = true
 rust-embed = { version = "6.6", features = ["debug-embed"] }
 rustls = "0.21"
 rustls-pemfile = "1.0"
+urlencoding = "2.1"
 schemars = "0.8"
 secrecy = { version = "0.8", features = ["serde", "alloc"] }
 serde.workspace = true
