--- a/src/common/config/Cargo.toml
+++ b/src/common/config/Cargo.toml
@@ -7,4 +7,5 @@ license.workspace = true
 [dependencies]
 common-base.workspace = true
 humantime-serde.workspace = true
+rskafka.workspace = true
 serde.workspace = true
