--- a/src/mito2/Cargo.toml
+++ b/src/mito2/Cargo.toml
@@ -58,6 +58,7 @@ snafu.workspace = true
 store-api.workspace = true
 strum.workspace = true
 table.workspace = true
+tokio-stream.workspace = true
 tokio-util.workspace = true
 tokio.workspace = true
 uuid.workspace = true
