--- a/src/meta-client/Cargo.toml
+++ b/src/meta-client/Cargo.toml
@@ -20,7 +20,7 @@ serde.workspace = true
 serde_json.workspace = true
 snafu.workspace = true
 table.workspace = true
-tokio-stream = { version = "0.1", features = ["net"] }
+tokio-stream = { workspace = true, features = ["net"] }
 tokio.workspace = true
 tonic.workspace = true
 
