--- a/src/meta-srv/Cargo.toml
+++ b/src/meta-srv/Cargo.toml
@@ -49,7 +49,7 @@ snafu.workspace = true
 store-api.workspace = true
 strum.workspace = true
 table.workspace = true
-tokio-stream = { version = "0.1", features = ["net"] }
+tokio-stream = { workspace = true, features = ["net"] }
 tokio.workspace = true
 toml.workspace = true
 tonic.workspace = true
