feat(inverted_index.search): add fst values mapper
Signed-off-by: Zhenchi <zhongzc_arch@outlook.com>

--- a/src/index/Cargo.toml
+++ b/src/index/Cargo.toml
@@ -12,6 +12,7 @@ common-macro.workspace = true
 fst.workspace = true
 futures.workspace = true
 greptime-proto.workspace = true
+mockall.workspace = true
 prost.workspace = true
 regex-automata.workspace = true
 regex.workspace = true
