--- a/Cargo.toml
+++ b/Cargo.toml
@@ -196,3 +196,6 @@ strip = true
 lto = "thin"
 debug = false
 incremental = false
+
+[patch.'https://github.com/GreptimeTeam/greptime-proto.git']
+greptime-proto = { git = "https://github.com/zhongzc/greptime-proto.git", branch = "zhongzc/index-add-row-count" }
