refactor: bytemuck to extract offset and size
Signed-off-by: Zhenchi <zhongzc_arch@outlook.com>

--- a/src/index/Cargo.toml
+++ b/src/index/Cargo.toml
@@ -17,6 +17,7 @@ prost.workspace = true
 regex-automata.workspace = true
 regex.workspace = true
 snafu.workspace = true
+bytemuck.workspace = true
 
 [dev-dependencies]
 tokio-util.workspace = true
