--- a/Cargo.toml
+++ b/Cargo.toml
@@ -100,6 +100,7 @@ opentelemetry-proto = { git = "https://github.com/waynexia/opentelemetry-rust.gi
     "metrics",
     "trace",
 ] }
+bytemuck = "1.12"
 parquet = "47.0"
 paste = "1.0"
 pin-project = "1.0"
