--- a/src/index/Cargo.toml
+++ b/src/index/Cargo.toml
@@ -6,12 +6,14 @@ license.workspace = true
 
 [dependencies]
 async-trait.workspace = true
+bytemuck.workspace = true
 common-base.workspace = true
 common-error.workspace = true
 common-macro.workspace = true
 fst.workspace = true
 futures.workspace = true
 greptime-proto.workspace = true
+mockall.workspace = true
 prost.workspace = true
 regex-automata.workspace = true
 regex.workspace = true
