refactor: simplify lease keeper

--- a/src/common/meta/Cargo.toml
+++ b/src/common/meta/Cargo.toml
@@ -24,6 +24,7 @@ common-runtime.workspace = true
 common-telemetry.workspace = true
 common-time.workspace = true
 datatypes.workspace = true
+derive_builder.workspace = true
 etcd-client.workspace = true
 futures.workspace = true
 humantime-serde.workspace = true
