ci: prevent running nightly FT in forks

--- a/.github/workflows/nightly-funtional-tests.yml
+++ b/.github/workflows/nightly-funtional-tests.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   sqlness-test:
     name: Run sqlness test
+    if: ${{ github.repository == 'GreptimeTeam/greptimedb' }}
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout
