feat: add build function and register it
build() function to return the database build info #2909

--- a/src/common/function/Cargo.toml
+++ b/src/common/function/Cargo.toml
@@ -6,6 +6,7 @@ license.workspace = true
 
 [dependencies]
 arc-swap = "1.0"
+build-data = "0.1.4"
 chrono-tz = "0.6"
 common-error.workspace = true
 common-macro.workspace = true
