--- a/config/datanode.example.toml
+++ b/config/datanode.example.toml
@@ -30,12 +30,11 @@ connect_timeout = "1s"
 tcp_nodelay = true
 
 # WAL options, see `standalone.example.toml`.
+# Uncomments all other wal options except the one you chose.
 [wal]
-provider = "RaftEngine"
+provider = "raft-engine"
 
-# Raft-engine wal options, .
-[wal.raft_engine]
-# WAL data directory
+# Raft-engine wal options.
 # dir = "/tmp/greptimedb/wal"
 file_size = "256MB"
 purge_threshold = "4GB"
@@ -44,7 +43,6 @@ read_batch_size = 128
 sync_write = false
 
 # Kafka wal options.
-[wal.kafka]
 
 # Storage options, see `standalone.example.toml`.
 [storage]
