--- a/config/metasrv.example.toml
+++ b/config/metasrv.example.toml
@@ -42,3 +42,5 @@ first_heartbeat_estimate = "1000ms"
 # timeout = "10s"
 # connect_timeout = "10s"
 # tcp_nodelay = true
+
+# TODO(niebayes): add wal options for meta srv.
