--- a/config/datanode.example.toml
+++ b/config/datanode.example.toml
@@ -30,14 +30,21 @@ connect_timeout = "1s"
 tcp_nodelay = true
 
 # WAL options, see `standalone.example.toml`.
+# Uncomments all other wal options except the one you chose.
 [wal]
 # WAL data directory
+provider = "raft-engine"
+
+# Raft-engine wal options.
 # dir = "/tmp/greptimedb/wal"
 file_size = "256MB"
 purge_threshold = "4GB"
 purge_interval = "10m"
 read_batch_size = 128
 sync_write = false
+
+# Kafka wal options.
+# To be filled.
 
 # Storage options, see `standalone.example.toml`.
 [storage]
