--- a/config/standalone.example.toml
+++ b/config/standalone.example.toml
@@ -82,6 +82,11 @@ enable = true
 
 # WAL options.
 [wal]
+# Available wal providers:
+# - "RaftEngine" (default)
+# - "Kafka"
+provider = "RaftEngine"
+
 # WAL data directory
 # dir = "/tmp/greptimedb/wal"
 # WAL file size in bytes.
