feat(inverted_index.create): add external sorter
Signed-off-by: Zhenchi <zhongzc_arch@outlook.com>

--- a/src/index/Cargo.toml
+++ b/src/index/Cargo.toml
@@ -22,5 +22,6 @@ regex.workspace = true
 snafu.workspace = true
 
 [dev-dependencies]
+rand.workspace = true
 tokio-util.workspace = true
 tokio.workspace = true
