chore: fill in kafka wal config

--- a/src/common/config/Cargo.toml
+++ b/src/common/config/Cargo.toml
@@ -8,6 +8,8 @@ license.workspace = true
 common-base.workspace = true
 humantime-serde.workspace = true
 itertools.workspace = true
+rskafka = "0.5"
 serde.workspace = true
 serde_json.workspace = true
 serde_with = "3"
+toml.workspace = true
