--- a/config/datanode.example.toml
+++ b/config/datanode.example.toml
@@ -29,13 +29,13 @@ connect_timeout = "1s"
 # `TCP_NODELAY` option for accepted connections, true by default.
 tcp_nodelay = true
 
-# WAL options, see `standalone.example.toml`.
+# WAL options.
 # Uncomments all other wal options except the one you chose.
 [wal]
 # WAL data directory
 provider = "raft-engine"
 
-# Raft-engine wal options.
+# Raft-engine wal options, see `standalone.example.toml`
 # dir = "/tmp/greptimedb/wal"
 file_size = "256MB"
 purge_threshold = "4GB"
@@ -44,7 +44,20 @@ read_batch_size = 128
 sync_write = false
 
 # Kafka wal options.
-# To be filled.
+# The broker endpoints of the Kafka cluster. ["127.0.0.1:9090"] by default.
+broker_endpoints = ["127.0.0.1:9090"]
+# Number of topics shall be created beforehand.
+num_topics = 64
+# Topic name prefix.
+topic_name_prefix = "greptimedb_wal_kafka_topic"
+# Number of partitions per topic.
+num_partitions = 1
+# The maximum log size an rskafka batch producer could buffer.
+max_batch_size = "4MB"
+# The linger duration of an rskafka batch producer.
+linger = "200ms"
+# The maximum amount of time (in milliseconds) to wait for Kafka records to be returned.
+max_wait_time = "100ms"
 
 # Storage options, see `standalone.example.toml`.
 [storage]
