--- a/config/standalone.example.toml
+++ b/config/standalone.example.toml
@@ -87,6 +87,8 @@ enable = true
 # - "Kafka"
 provider = "raft-engine"
 
+# There's no kafka wal config for standalone mode.
+
 # WAL data directory
 # dir = "/tmp/greptimedb/wal"
 # WAL file size in bytes.
