--- a/src/common/meta/Cargo.toml
+++ b/src/common/meta/Cargo.toml
@@ -34,6 +34,7 @@ prost.workspace = true
 regex.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+serde_with = "3"
 snafu.workspace = true
 store-api.workspace = true
 strum.workspace = true
