--- a/src/datanode/Cargo.toml
+++ b/src/datanode/Cargo.toml
@@ -12,7 +12,7 @@ async-stream.workspace = true
 async-trait.workspace = true
 axum = "0.6"
 axum-macros = "0.3"
-bytes = "1.1"
+bytes.workspace = true
 catalog.workspace = true
 client.workspace = true
 common-base.workspace = true
