--- a/src/mito2/Cargo.toml
+++ b/src/mito2/Cargo.toml
@@ -17,7 +17,7 @@ async-channel = "1.9"
 async-compat = "0.2"
 async-stream.workspace = true
 async-trait = "0.1"
-bytes = "1.4"
+bytes.workspace = true
 chrono.workspace = true
 common-base.workspace = true
 common-catalog.workspace = true
