--- a/src/common/substrait/Cargo.toml
+++ b/src/common/substrait/Cargo.toml
@@ -7,7 +7,7 @@ license.workspace = true
 [dependencies]
 async-recursion = "1.0"
 async-trait.workspace = true
-bytes = "1.1"
+bytes.workspace = true
 catalog.workspace = true
 common-catalog.workspace = true
 common-error.workspace = true
