--- a/src/index/Cargo.toml
+++ b/src/index/Cargo.toml
@@ -6,14 +6,14 @@ license.workspace = true
 
 [dependencies]
 async-trait.workspace = true
+asynchronous-codec = "0.7.0"
 bytemuck.workspace = true
-bytes = "0.5.6"
+bytes.workspace = true
 common-base.workspace = true
 common-error.workspace = true
 common-macro.workspace = true
 fst.workspace = true
 futures.workspace = true
-futures_codec = "0.4.1"
 greptime-proto.workspace = true
 mockall.workspace = true
 prost.workspace = true
