--- a/src/index/Cargo.toml
+++ b/src/index/Cargo.toml
@@ -12,6 +12,7 @@ bytes.workspace = true
 common-base.workspace = true
 common-error.workspace = true
 common-macro.workspace = true
+common-telemetry.workspace = true
 fst.workspace = true
 futures.workspace = true
 greptime-proto.workspace = true
